--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 </head>
 
 <body>
-    <span class="icon-container">
-        <svg class="icon icon--primary">
-            <use xlink:href='images/sprite.svg#wordpress'></use>
-        </svg>
-    </span>
+    <button class="btn btn--primary">Buy now</button>
+    <button class="btn btn--secondary">Buy now</button>
+    <button class="btn btn--accent">Buy now</button>
+    <a href="" class="btn btn--outline btn--block">read more</a>
 </body>
 
 </html>
