Build the input component.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <button class="btn btn--primary">Buy now</button>
-    <button class="btn btn--secondary">Buy now</button>
-    <button class="btn btn--accent">Buy now</button>
-    <a href="" class="btn btn--outline btn--block">read more</a>
+    <div class="input-group">
+        <input type="text" class="input" placeholder="Search here ...">
+        <button class="btn btn--accent">Search</button>
+    </div>
 </body>
 
 </html>
