--- a/index.html
+++ b/index.html
@@ -12,9 +12,27 @@
 </head>
 
 <body>
-    <div class="input-group">
-        <input type="text" class="input" placeholder="Search here ...">
-        <button class="btn btn--accent">Search</button>
+    <div style="width: 70%; padding: 4rem">
+        <div class="plan plan--popular">
+            <div class="card card--secondary">
+                <header class="card__header">
+                    <h3 class="plan__name">Entry</h3>
+                    <span class="plan__price">$9</span>
+                    <span class="plan__billing-cycle">/month</span>
+                    <span class="badge badge--secondary badge--small">10% OFF</span>
+                    <span class="plan__description">Easy start</span>
+                </header>
+                <div class="card__body">
+                    <ul class="list list--tick">
+                        <li class="list__item">item 1</li>
+                        <li class="list__item">item 2</li>
+                        <li class="list__item">item 3</li>
+                        <li class="list__item">item 3</li>
+                    </ul>
+                    <button class="btn btn--outline btn--block">Buy Now</button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
