--- a/index.html
+++ b/index.html
@@ -11,39 +11,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body style="padding: 30rem;">
-    <div class="card testimonial">
-        <div class="grid grid--1x2">
-            <div class="testimonial__image">
-                <img src="images/IMG_0786.jpg" alt="A Happy Smiling Hamed">
-                <span class="icon-container icon-container--accent">
-                    <svg class="icon icon--white icon--small">
-                        <use xlink:href='images/sprite.svg#quotes'></use>
-                    </svg>
-                </span>
-            </div>
-            <blockquote class="quote">
-                <p class="quote__text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nulla porro, ullam
-                    distinctio dolores, dolor
-                    culpa enim mollitia deserunt accusantium, quo et nisi expedita doloribus dignissimos tenetur
-                    deleniti aut.
-                    Ipsam? </p>
-                <footer>
-                    <div class="media">
-                        <div class="media__image">
-                            <svg class="icon icon--primary quote__line">
-                                <use xlink:href='images/sprite.svg#line'></use>
-                            </svg>
-                        </div>
-                        <div class="media__body">
-                            <h3 class="media__title quote__author">Hamed Hamzeh</h3>
-                            <p class="quote__organization">University of Tehran</p>
-                        </div>
-                    </div>
-                </footer>
-            </blockquote>
-        </div>
-    </div>
+<body>
+
 </body>
 
 </html>
