--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -33,12 +34,14 @@
     <!-- Hero Section -->
     <section class="block block--dark block--skewed-left hero">
         <div class="container grid grid--1x2">
-            <header class="block__header hero__content ">
+            <header class="block__header hero__content" data-aos="fade-right">
                 <h1 class="block__heading">Could Housting for Pros</h1>
                 <p class="hero__tagline">Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="" class="btn btn--accent btn--stretched">More Info</a>
+                <a href="" class="btn btn--accent btn--stretched " data-aos="zoom-out-right"
+                    data-aos-duration="2000">More
+                    Info</a>
             </header>
-            <div class="hero__image">
+            <div class="hero__image" data-aos="zoom-in-up">
                 <picture>
                     <source type="image/webp" srcset="images/banner.webp 1x, images/banner@2x.webp 2x">
                     <source type="image/webp" srcset="images/banner.png 1x, images/banner@2x.png 2x">
@@ -49,7 +52,7 @@
     </section>
 
     <!-- Domain Section -->
-    <section class="block container block-domain">
+    <section class="block container block-domain" data-aos="fade-up">
         <header class="block__header">
             <h2>Lorem ipsum dolor sit amet.</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, asperiores.</p>
@@ -74,10 +77,10 @@
     </section>
 
     <!-- Plan Section -->
-    <section class="block container block-plans">
+    <section class="block container block-plans" data-aos="fade-up">
         <div class="grid grid--1x3">
             <div class="plan">
-                <div class="card card--secondary">
+                <div class="card card--secondary" data-aos="fade-right">
                     <header class="card__header">
                         <h3 class="plan__name">Entry</h3>
                         <span class="plan__price">$14</span>
@@ -96,7 +99,7 @@
                     </div>
                 </div>
             </div>
-            <div class="plan plan--popular">
+            <div class="plan plan--popular" data-aos="zoom-in">
                 <div class="card card--primary">
                     <header class="card__header">
                         <h3 class="plan__name">Entry</h3>
@@ -117,7 +120,7 @@
                 </div>
             </div>
             <div class="plan">
-                <div class="card card--secondary">
+                <div class="card card--secondary" data-aos="fade-left">
                     <header class="card__header">
                         <h3 class="plan__name">Entry</h3>
                         <span class="plan__price">$14</span>
@@ -141,12 +144,12 @@
 
     <!-- Feature Section -->
     <section class="block container">
-        <header class="block__header">
+        <header class="block__header" data-aos="zoom-in-up">
             <h2>Host on the Cloud to Keep Growing</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, error!</p>
         </header>
         <article class="grid grid--1x2 feature">
-            <div class="feature__content">
+            <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
                         <use xlink:href='images/sprite.svg#easy'></use>
@@ -160,14 +163,14 @@
                 </p>
                 <a href="#" class="link-arrow ">Learn More</a>
             </div>
-            <picture>
+            <picture data-aos="zoom-in-left">
                 <source type="image/webp" srcset="images/easy.webp 1x, images/easy@2x.webp 2x" />
                 <source type="image/jpg" srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x" />
                 <img class="feature__image" src="images/easy@2x.jpg" alt="" />
             </picture>
         </article>
         <article class="grid grid--1x2 feature">
-            <div class="feature__content">
+            <div class="feature__content" data-aos="fade-left">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
                         <use xlink:href='images/sprite.svg#computer'></use>
@@ -181,14 +184,14 @@
                 </p>
                 <a href="#" class="link-arrow ">Learn More</a>
             </div>
-            <picture>
+            <picture data-aos="zoom-in-right">
                 <source type="image/webp" srcset="images/fast.webp 1x, images/fast@2x.webp 2x" />
                 <source type="image/jpg" srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x" />
                 <img class="feature__image" src="images/fast@2x.jpg" alt="" />
             </picture>
         </article>
         <article class="grid grid--1x2 feature">
-            <div class="feature__content">
+            <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
                         <use xlink:href='images/sprite.svg#growth'></use>
@@ -202,14 +205,14 @@
                 </p>
                 <a href="#" class="link-arrow ">Learn More</a>
             </div>
-            <picture>
+            <picture data-aos="zoom-in-left">
                 <source type="image/webp" srcset="images/support.webp 1x, images/support@2x.webp 2x" />
                 <source type="image/jpg" srcset="images/support.jpg 1x, images/support@2x.jpg 2x" />
                 <img class="feature__image" src="images/support@2x.jpg" alt="" />
             </picture>
         </article>
         <article class="grid grid--1x2 feature">
-            <div class="feature__content">
+            <div class="feature__content" data-aos="fade-left">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
                         <use xlink:href='images/sprite.svg#settings'></use>
@@ -222,7 +225,7 @@
                 </p>
                 <a href="#" class="link-arrow ">Learn More</a>
             </div>
-            <picture>
+            <picture data-aos="zoom-in-right">
                 <source type="image/webp" srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x" />
                 <source type="image/jpg" srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x" />
                 <img class="feature__image" src="images/wordpress@2x.jpg" alt="" />
@@ -236,12 +239,12 @@
             <h2>User-friendly Control Panel</h2>
         </header>
         <div class="container grid grid--1x2">
-            <picture class="block-showcase__image">
-                <source type="image/webp" srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x" />
+            <picture class="block-showcase__image" data-aos="fade-right">
+                <source type=" image/webp" srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x" />
                 <source type="image/png" srcset="images/ipad.png 1x, images/ipad@2x.png 2x" />
                 <img src="images/ipad.png" alt="" />
             </picture>
-            <ul class="list">
+            <ul class="list" data-aos="fade-up">
                 <li>
                     <div class="media">
                         <div class="media__image">
@@ -299,13 +302,13 @@
 
     <!-- Testimonial -->
     <section class="block">
-        <header class="block__header">
+        <header class="block__header" data-aos="zoom-in-up">
             <h2>About Hamed</h2>
             <p>Lorem ipsum dolor sit amet.</p>
         </header>
         <div class="container">
             <div class="card testimonial">
-                <div class="grid grid--1x2">
+                <div class="grid grid--1x2" data-aos="zoom-out" data-aos-duration="2000">
                     <div class="testimonial__image">
                         <img src="images/IMG_0786.jpg" alt="A Happy Smiling Hamed">
                         <span class="icon-container icon-container--accent">
@@ -342,7 +345,7 @@
     </section>
 
     <!-- Callout Section -->
-    <div class="container">
+    <div class="container" data-aos="zoom-in-up">
         <div class="callout callout--primary callout-signup">
             <div class="grid grid--1x2">
                 <div class="callout__content">
@@ -432,6 +435,10 @@
 
 
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
