--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="">
+    <!-- Open Graph Protocol -->
+    <meta property="og:title" content="...">
+    <meta property="og:type" content="Website">
+    <meta property="og:image" content="...">
+    <meta property="og:url" content="...">
+    <title>Hamed - Front Exercise</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/normalize.css">
