--- a/index.html
+++ b/index.html
@@ -369,13 +369,13 @@
     <!-- footer -->
     <footer class="block block--dark footer">
         <div class="container grid footer__sections">
-            <section class="collapsible collapsible--expanded footer__section">
-                <header class="collapsible__header">
+            <div class="collapsible collapsible--expanded footer__section">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Products</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="#">Website Hosting</a></li>
@@ -383,14 +383,14 @@
                         <li><a href="#">Migrations</a></li>
                     </ul>
                 </div>
-            </section>
-            <section class="collapsible footer__section">
-                <header class="collapsible__header">
+            </div>
+            <div class="collapsible footer__section">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Company</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="#">About</a></li>
@@ -398,14 +398,14 @@
                         <li><a href="#">Blog</a></li>
                     </ul>
                 </div>
-            </section>
-            <section class="collapsible footer__section">
-                <header class="collapsible__header">
+            </div>
+            <div class="collapsible footer__section">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Support</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="#">Contact</a></li>
@@ -413,14 +413,14 @@
                         <li><a href="#">FAQ</a></li>
                     </ul>
                 </div>
-            </section>
-            <section class="collapsible footer__section">
-                <header class="collapsible__header">
+            </div>
+            <div class="collapsible footer__section">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Domains</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="#">Domain Checker</a></li>
@@ -428,16 +428,12 @@
                         <li><a href="#">Free Domain</a></li>
                     </ul>
                 </div>
-            </section>
-            <section class="footer__brand">
+            </div>
+            <div class="footer__brand">
                 <img src="images/Logo-removebg.png" alt="" />
-            </section>
+            </div>
         </div>
     </footer>
-
-
-
-
 
 
     <script src="js/main.js"></script>
