--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="/"><img src="images/Logo-removebg.png" alt=""></a>
             </span>
             <svg class="icon icon--white nav__toggler">
-                <use xlink:href='images/sprite.svg#menu'></use>
+                <use href='images/sprite.svg#menu'></use>
             </svg>
             <ul class="list nav__list collapsible__content">
                 <li class="nav__item"><a href="#">itme 1</a></li>
@@ -67,7 +67,7 @@
             <input type="text" class="input" placeholder="Search here ...">
             <button class="btn btn--accent">
                 <svg class="icon icon--white">
-                    <use xlink:href='images/sprite.svg#search'></use>
+                    <use href='images/sprite.svg#search'></use>
                 </svg>
                 Search
             </button>
@@ -158,7 +158,7 @@
             <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
-                        <use xlink:href='images/sprite.svg#easy'></use>
+                        <use href='images/sprite.svg#easy'></use>
                     </svg>
                 </span>
                 <h3 class="feature__heading">Super Easy to Use</h3>
@@ -179,7 +179,7 @@
             <div class="feature__content" data-aos="fade-left">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
-                        <use xlink:href='images/sprite.svg#computer'></use>
+                        <use href='images/sprite.svg#computer'></use>
                     </svg>
                 </span>
                 <h3 class="feature__heading">simple and fast</h3>
@@ -200,7 +200,7 @@
             <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
-                        <use xlink:href='images/sprite.svg#growth'></use>
+                        <use href='images/sprite.svg#growth'></use>
                     </svg>
                 </span>
                 <h3 class="feature__heading">Super Easy to Use</h3>
@@ -221,7 +221,7 @@
             <div class="feature__content" data-aos="fade-left">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
-                        <use xlink:href='images/sprite.svg#settings'></use>
+                        <use href='images/sprite.svg#settings'></use>
                     </svg>
                 </span>
                 <h3 class="feature__heading">Super Easy to Use</h3>
@@ -255,7 +255,7 @@
                     <div class="media">
                         <div class="media__image">
                             <svg class="icon icon--primary">
-                                <use xlink:href="images/sprite.svg#snap"></use>
+                                <use href="images/sprite.svg#snap"></use>
                             </svg>
                         </div>
                         <div class="media__body">
@@ -272,7 +272,7 @@
                     <div class="media">
                         <div class="media__image">
                             <svg class="icon icon--primary">
-                                <use xlink:href="images/sprite.svg#growth"></use>
+                                <use href="images/sprite.svg#growth"></use>
                             </svg>
                         </div>
                         <div class="media__body">
@@ -289,7 +289,7 @@
                     <div class="media">
                         <div class="media__image">
                             <svg class="icon icon--primary">
-                                <use xlink:href="images/sprite.svg#wordpress"></use>
+                                <use href="images/sprite.svg#wordpress"></use>
                             </svg>
                         </div>
                         <div class="media__body">
@@ -319,7 +319,7 @@
                         <img src="images/IMG_0786.jpg" alt="A Happy Smiling Hamed">
                         <span class="icon-container icon-container--accent">
                             <svg class="icon icon--white icon--small">
-                                <use xlink:href='images/sprite.svg#quotes'></use>
+                                <use href='images/sprite.svg#quotes'></use>
                             </svg>
                         </span>
                     </div>
@@ -335,7 +335,7 @@
                             <div class="media">
                                 <div class="media__image">
                                     <svg class="icon icon--primary quote__line">
-                                        <use xlink:href='images/sprite.svg#line'></use>
+                                        <use href='images/sprite.svg#line'></use>
                                     </svg>
                                 </div>
                                 <div class="media__body">
@@ -373,7 +373,7 @@
                 <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Products</h2>
                     <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="images/sprite.svg#chevron"></use>
+                        <use href="images/sprite.svg#chevron"></use>
                     </svg>
                 </div>
                 <div class="collapsible__content">
@@ -388,7 +388,7 @@
                 <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Company</h2>
                     <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="images/sprite.svg#chevron"></use>
+                        <use href="images/sprite.svg#chevron"></use>
                     </svg>
                 </div>
                 <div class="collapsible__content">
@@ -403,7 +403,7 @@
                 <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Support</h2>
                     <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="images/sprite.svg#chevron"></use>
+                        <use href="images/sprite.svg#chevron"></use>
                     </svg>
                 </div>
                 <div class="collapsible__content">
@@ -418,7 +418,7 @@
                 <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Domains</h2>
                     <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="images/sprite.svg#chevron"></use>
+                        <use href="images/sprite.svg#chevron"></use>
                     </svg>
                 </div>
                 <div class="collapsible__content">
