Fix the testimonial image problem.

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <div class="card testimonial">
                 <div class="grid grid--1x2" data-aos="zoom-out" data-aos-duration="2000">
                     <div class="testimonial__image">
-                        <img src="images/IMG_0786.jpg" alt="A Happy Smiling Hamed">
+                        <img src="images/IMG_0786.JPG" alt="A Happy Smiling Hamed">
                         <span class="icon-container icon-container--accent">
                             <svg class="icon icon--white icon--small">
                                 <use href='images/sprite.svg#quotes'></use>
